--- a/taskcluster/ci/test/reftest.yml
+++ b/taskcluster/ci/test/reftest.yml
@@ -104,6 +104,7 @@ reftest:
         by-test-platform:
             android-4.3-arm7-api-16/debug: 56
             android.*: 28
+            macosx64-qr/opt: 3
             macosx64.*/opt: 1
             macosx64.*/debug: 3
             windows.*/opt: 2
