--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -298,6 +298,9 @@ macosx64-talos-profiling:
     - talos-tp6-profiling
     # - talos-tps-profiling # Bug 1453007 times out
 
+macosx64-qr-tests:
+    - reftest
+
 linux32-tests:
     - cppunit
     - crashtest
