--- a/gfx/layers/apz/test/mochitest/mochitest.ini
+++ b/gfx/layers/apz/test/mochitest/mochitest.ini
@@ -29,6 +29,7 @@
     helper_hittest_fixed_in_scrolled_transform.html
     helper_hittest_float_bug1434846.html
     helper_hittest_float_bug1443518.html
+    helper_hittest_touchaction.html
     helper_key_scroll.html
     helper_long_tap.html
     helper_override_root.html
